# deepflow

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
.overstory/: events.db  events.db-shm  events.db-wal  mail.db  mail.db-shm  mail.db-wal  sessions.db  sessions.db-shm  sessions.db-wal
.overstory/logs/orchestrator/: .current-session
.overstory/logs/orchestrator/2026-03-16T01-03-31-711Z/: events.ndjson  tools.ndjson
.overstory/logs/orchestrator/2026-03-16T01-04-39-648Z/: events.ndjson  tools.ndjson
.overstory/logs/orchestrator/2026-03-16T01-14-09-423Z/: events.ndjson  tools.ndjson
.overstory/logs/orchestrator/2026-03-16T01-17-23-140Z/: events.ndjson  tools.ndjson
.overstory/logs/orchestrator/2026-03-16T01-27-39-661Z/: events.ndjson  tools.ndjson
assets/ascii/: deep_flo_banner.txt
deep_flo/: __init__.py
deep_flo/utils/: __init__.py  banner.py
deploy/: Dockerfile.deep-flo  Dockerfile.runtime  README.md  docker-compose.stack.yml  docker-compose.yml
docs/: API-REFERENCE.md  ARCHITECTURE.md  INDEX.md  QUICKSTART.md  architecture.md  index.md  roadmap.md  setup.md  status.md  testing.md  why-deep-flo.md  why-deepflow.md  workflows.md
docs/planning/: research-pipeline-build-plan.md
editor/: README.md  zed-settings.example.json
examples/langflow/: README.md  deep-flo-research-example.json  deep_flo_chat_bridge.json  deep_flo_mcp_server_config.json  deep_flo_run_flow_recipe.md  deep_flo_text_bridge.json  deepflow-research-example.json
langflow_components/: __init__.py  deep_flo_runtime_component.py
memories/: AGENTS.md
ontology/: README.md
ontology/domains/sociology/: taxonomy.md  vocabulary.md
ontology/schemas/: base-node-schema.json
openspec/changes/001-research-agent-identity/: proposal.md  tasks.md
openspec/changes/002-literature-search-skill/: proposal.md  tasks.md
openspec/changes/003-source-extraction-skill/: proposal.md  tasks.md
openspec/changes/004-ontology-integration/: proposal.md  tasks.md
scripts/: generate_langflow_examples.py  start_acp.sh  start_langflow.sh  start_langflow_postgres.sh  start_mcp_http.sh  start_mcp_stdio.sh  start_runtime.sh  start_stack.sh
skills/literature-search/: SKILL.md
skills/ontology-lookup/: SKILL.md
skills/source-extraction/: SKILL.md
src/deep_flo_runtime/: __init__.py  __main__.py  acp_server.py  agent.py  cli.py  config.py  mcp_server.py  prompts.py  runtime_api.py  server.py  sqlite_compat.py  tools.py
src/deep_flo_runtime/utils/: __init__.py  banner.py
src/deepflow_runtime/: __main__.py  config.py  runtime_api.py  server.py
tests/: test_agent.py  test_components.py  test_config.py  test_mcp_server.py  test_runtime.py  test_runtime_api.py
