[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-flo"
version = "0.1.0"
description = "A structured integration layer between Langflow (visual planning) and LangChain Deep Agents (execution)"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11,<3.14"
authors = [
    {name = "Optimal Living Systems"},
]
keywords = [
    "langchain",
    "langflow",
    "deep-agents",
    "ai-agents",
    "workflow",
    "orchestration",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core dependencies shared by all install paths
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
# Runtime server: installs Deep Agents + LangChain 1.x
# DO NOT install this in the same environment as Langflow
runtime = [
    "deepagents>=0.4.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "sse-starlette>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
]

# Development dependencies for the runtime
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "httpx>=0.25.0",
    "mypy>=1.13.0",
]

# Development dependencies for Langflow component work
# Install in a SEPARATE venv from [runtime]
langflow-dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
    "respx>=0.22.0",
]

[project.scripts]
deep-flo = "deep_flo_runtime.cli:main"
deep-flo-runtime = "deep_flo_runtime.server:main"

[project.urls]
Repository = "https://github.com/Optimal-Living-Systems/deep-flo"
Documentation = "https://github.com/Optimal-Living-Systems/deep-flo/tree/main/docs"
Issues = "https://github.com/Optimal-Living-Systems/deep-flo/issues"

[tool.setuptools.packages.find]
where = ["src"]


[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "D",    # pydocstyle
    "T201", # print statements
]
ignore = [
    "D100",  # missing module docstring (too noisy for early development)
    "D104",  # missing package docstring
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
